feat: jwt authentication for securing endpoints
